<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="20dp"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    android:descendantFocusability="blocksDescendants">>
    <LinearLayout
        android:id="@+id/ly_menu_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_menu_item_no"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/item_no"
                android:textColor="@color/greenf" />

            <TextView
                android:id="@+id/tv_menu_item_status"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/item_status"
                android:textColor="@color/DarkOrange" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_menu_item_pro_type"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/pro_type" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@color/white"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_menu_item_rz_scope"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rz_scope" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_shu_greenf" />

            <TextView
                android:id="@+id/tv_menu_item_rz_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/rz_type" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@mipmap/ic_shu_greenf" />

            <TextView
                android:id="@+id/tv_menu_item_check_type"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/check_type" />

        </LinearLayout>
    </LinearLayout>
    <Button
        android:id="@+id/btn_menu_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/upload"
        android:background="@color/greenf"

        />
        </LinearLayout>
