<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sjs.dz.rzxt3.AboutActivity"
    android:orientation="vertical"
    android:fitsSystemWindows="false"
    >
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="8dp"
       >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_about"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:popupTheme="@style/AppTheme.PopupOverlay" >
            <ImageView
                android:id="@+id/im_about_back"
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:src="@mipmap/ic_back_green"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:text="@string/my_about_text"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:id="@+id/sLayout_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fadingEdge="none"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/graye"
            android:paddingBottom="40dp"
            >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/graya"
        android:layout_marginTop="14dp"

     >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0.5dp"
            android:background="@color/white"
            android:orientation="horizontal"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_com_name_info"
                android:textColor="@color/colorAccent"
                android:textSize="16dp" />


        </LinearLayout>


        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0.5dp"
        android:padding="14dp"
        android:background="@color/white">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:text="@string/about_main_text"
            />
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_marginTop="0.5dp"
    android:padding="12dp"
    android:background="@color/white"

    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:textSize="14dp"
        android:text="@string/about_com_addr"
        />
    <TextView
        android:alpha="0"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:layout_weight="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_com_addr_info"
        android:textColor="@color/black"
        android:textSize="14dp" />
</LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0.5dp"
        android:padding="14dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14dp"
            android:text="@string/about_com_tel"
            />
        <TextView
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_weight="1.0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="14dp"
            android:text="@string/about_com_tel_info"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0.5dp"
        android:padding="14dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="14dp"
            android:text="@string/about_com_phone"
            />
        <TextView
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="14dp"
            android:layout_weight="1.0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_com_phone_info"
            android:textSize="14dp"
            android:textColor="@color/black"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0.5dp"
        android:padding="14dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_item_web_url"
            android:textSize="14dp"
            />
        <TextView
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_item_web_url_info"
            android:textColor="@color/black"
            android:textSize="14dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0.5dp"
        android:padding="14dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_wechar"
            android:textSize="14dp"
            />
        <TextView
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_wechar_info"
            android:textColor="@color/colorAccent"
            android:textSize="14dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0.5dp"
        android:layout_marginBottom="0.5dp"
        android:padding="14dp"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_email"
            android:textSize="14dp"
            />
        <TextView
            android:alpha="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/about_email_info"
            android:gravity="right"
            android:textColor="@color/black"
            android:textSize="14dp"
            />
    </LinearLayout>
</LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
