<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="12dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="6dp"
    android:background="@color/white"
    android:layout_marginTop="10dp">


    <CheckBox
        android:id="@+id/cb_multi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:button="@drawable/selector_checkbox_multi"
        android:checked="false"
        android:clickable="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        />
    <RelativeLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingLeft="20dp"
        android:paddingBottom="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:id="@+id/tv_item_clear_pact_no"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/item_about"
            android:background="@color/white"
            android:textSize="18dp"
            android:textColor="@color/black"
            />

    <TextView
        android:id="@+id/tv_item_clear_pact_name"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/item_about"
        android:background="@color/white"
        android:textSize="18dp"
        android:textColor="@color/black"
        />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_clear_pact_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/pact_start_date"
                android:textColor="@color/black"
                android:textSize="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/date_biao"
                android:textColor="@color/black"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/tv_item_clear_pact_end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/pact_end_date"
                android:textColor="@color/black"
                android:textSize="12dp" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
</RelativeLayout>