<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="100dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@mipmap/im_loginbg"
    tools:context="com.sjs.dz.rzxt3.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
        android:layout_height="75dp"
        android:layout_width="75dp"
        android:src="@mipmap/ic_com_logo"/>
        <!--<TextView-->
            <!--android:layout_width="65dp"-->
            <!--android:layout_height="65dp"-->
            <!--android:gravity="center"-->
            <!--android:text="检"-->
            <!--android:textColor="@color/white"-->
            <!--android:textSize="60dp" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="65dp"
            android:background="@color/green4"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_account" />

            <EditText
                android:id="@+id/et_acc"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green4"
                android:hint="@string/Input_useracc"

                android:paddingLeft="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@color/green4"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="10dp"
                android:src="@mipmap/ic_password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/green4"
                android:hint="@string/Input_password"
                android:inputType="textPassword"
                android:paddingLeft="8dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white2"

                />
        </LinearLayout>
        <!--<LinearLayout-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_marginTop="20dp"-->
            <!--android:orientation="horizontal"-->
            <!--android:gravity="center"-->
        <!--&gt;-->
            <!--<LinearLayout-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_width="match_parent"-->
        <!--android:background="@color/textViewBackground"-->
        <!--android:gravity="center"-->
        <!--android:layout_weight="0.8">-->
            <!--<ImageView-->
        <!--android:layout_width="30dp"-->
        <!--android:layout_height="30dp"-->
        <!--android:layout_margin="10dp"-->
        <!--android:src="@mipmap/ic_connect"/>-->
            <!--<TextView-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:gravity="left|center"-->
        <!--android:id="@+id/spinner_ip"-->
        <!--android:textColor="@color/white"-->
        <!--android:layout_weight="1" />-->

        <!--</LinearLayout>-->
            <!--<ImageButton-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="match_parent"-->
        <!--android:padding="10dp"-->
        <!--android:layout_marginLeft="10dp"-->
        <!--android:id="@+id/imbtn_ip_edit"-->
        <!--android:src="@mipmap/ic_edit"-->
        <!--android:background="@color/textViewBackground"/>-->
        <!--</LinearLayout>-->


        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:background="@color/greenb"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
